--- a/src/ChinaTower.StationPlanning/project.json
+++ b/src/ChinaTower.StationPlanning/project.json
@@ -21,7 +21,7 @@
   },
 
   "commands": {
-    "web": "Microsoft.AspNet.Server.Kestrel"
+    "web": "Microsoft.AspNet.Server.Kestrel --server.urls http://*:5004"
   },
 
   "frameworks": {
